-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.1.0
-
None
-
i686 server build
-
3
-
5061
http://build.whamcloud.com/job/lustre-reviews/build_type=server,distro=el6/10/consoleFull:
/var/lib/jenkins/workspace/lustre-reviews/build_type/server/distro/el6/BUILD/BUILD/lustre-2.0.59/lustre/mdt/mdt_lproc.c: In function 'lprocfs_wr_identity_upcall': /var/lib/jenkins/workspace/lustre-reviews/build_type/server/distro/el6/BUILD/BUILD/lustre-2.0.59/lustre/mdt/mdt_lproc.c:255: error: the frame size of 1040 bytes is larger than 1024 bytes make[6]: *** [/var/lib/jenkins/workspace/lustre-reviews/build_type/server/distro/el6/BUILD/BUILD/lustre-2.0.59/lustre/mdt/mdt_lproc.o] Error 1 make[5]: *** [/var/lib/jenkins/workspace/lustre-reviews/build_type/server/distro/el6/BUILD/BUILD/lustre-2.0.59/lustre/mdt] Error 2 make[4]: *** [/var/lib/jenkins/workspace/lustre-reviews/build_type/server/distro/el6/BUILD/BUILD/lustre-2.0.59/lustre] Error 2 make[3]: *** [_module_/var/lib/jenkins/workspace/lustre-reviews/build_type/server/distro/el6/BUILD/BUILD/lustre-2.0.59] Error 2