LU-175 don't allocate kernbuf on the stack

On i686, allocating a kernbuf of 1K on the stack causes a compiler
error:
lustre/mdt/mdt_lproc.c:255: error: the frame size of 1040 bytes is
                                   larger than 1024 bytes

Signed-off-by: Brian J. Murrell <brian@whamcloud.com>
Change-Id: I91e4fc39fa6bdc6b6d7937263520b1dfce8c4746
Reviewed-on: http://review.whamcloud.com/401
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Hudson
Reviewed-by: Lai Siyao <laisiyao@whamcloud.com>
Reviewed-by: Johann Lombardi <johann@whamcloud.com>